# adventofcode

2022/python/: .pylintrc  pyproject.toml
2022/python/advent/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
2022/python/advent/tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py
