[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
konboi = "advent.main:app"

[tool.poetry.dependencies]
python = "^3.10"
sortedcontainers = "^2.4.0"
typer = "^0.7.0"
mypy = "^0.991"
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.2.0"
pylint = "^2.15.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ['py310']

[tool.isort]
line_length = 110
known_first_party = ["tests", "advent"]
multi_line_output = 3
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true
force_sort_within_sections = true
no_lines_before = 'LOCALFOLDER'
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_optional = true
